Fix layout issue for header: Rename button hard to find

--- a/src/ShiningSword/sass/main.sass
+++ b/src/ShiningSword/sass/main.sass
@@ -41,7 +41,6 @@ body
     display: grid
     grid-template-columns: repeat(auto-fill, 100px)
     column-gap: 0.875rem
-    max-width: 100vw
     user-select: none
 
 .gridContainer
@@ -57,6 +56,8 @@ input[type=checkbox]
     fieldset
         display: inline-block
         flex: 1
+        margin-left: auto
+        margin-right: auto
 
 button
     min-width: 1.5rem
